tests/samples/slot-name-exists/template.blate
// error: slot name already defined
{@slot foo} Foo foo {/slot}
{@slot bar_baz} Bar baz {/slot}
{@slot foo} Foo foo {/slot}
